# action/tag/routes.go
@@ -17,10 +17,10 @@ func Router() chi.Router {
 	r.Get("/", list)    // GET /tags - return list of tags
 	r.Post("/", create) // POST /tags - create a new tag and persist it
 
-	r.Route("/{id}", func(r chi.Router) {
-		r.Get("/", details)   // GET /tags/{id} - read a single tag by :id
-		r.Put("/", update)    // PUT /tags/{id} - update a single tag by :id
-		r.Delete("/", delete) // DELETE /tags/{id} - delete a single tag by :id
+	r.Route("/{tag_id}", func(r chi.Router) {
+		r.Get("/", details)   // GET /tags/{tag_id} - read a single tag by :tag_id
+		r.Put("/", update)    // PUT /tags/{tag_id} - update a single tag by :tag_id
+		r.Delete("/", delete) // DELETE /tags/{tag_id} - delete a single tag by :tag_id
 	})
 
 	return r
