# action/user/routes.go
@@ -16,10 +16,10 @@ func Router() chi.Router {
 	r.Get("/", list)    // GET /users - return list of users
 	r.Post("/", create) // POST /users - create a new user and persist it
 
-	r.Route("/{id}", func(r chi.Router) {
-		r.Get("/", details)   // GET /users/{id} - read a single user by :id
-		r.Put("/", update)    // PUT /users/{id} - update a single user by :id
-		r.Delete("/", delete) // DELETE /users/{id} - delete a single user by :id
+	r.Route("/{user_id}", func(r chi.Router) {
+		r.Get("/", details)   // GET /users/{user_id} - read a single user by :user_id
+		r.Put("/", update)    // PUT /users/{user_id} - update a single user by :user_id
+		r.Delete("/", delete) // DELETE /users/{user_id} - delete a single user by :user_id
 	})
 
 	return r
